# C-RPC-Architecture

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp
registry/: CMakeLists.txt  DispatcherServlet.hpp  ServerHandler.hpp  registry.cpp
rpc/: CMakeLists.txt  LocalRegister.hpp  RPCClient.hpp  RPCServer.hpp  RemoteRegiConn.hpp  RequestHandler.hpp  ThreadPool.hpp  rpc.cpp
server/: CMakeLists.txt  server.cpp
